# autobridge-mac

./: README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  enet_bridge.rs  lib.rs  main.rs  state.rs  tunnel.rs
src/types/: index.ts
