[package]
name = "autobridge-mac"
version = "0.1.0"
description = "AutoBridge Mac — ENET/DoIP Bridge for macOS"
authors = ["AutoBridge Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "autobridge_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "autobridge-mac"
path = "src/main.rs"

# ── Build dependencies ────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Runtime dependencies ──────────────────────────────────────────────────────
[dependencies]
tauri        = { version = "2", features = [] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Async runtime + networking
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util     = { version = "0.3" }

# Network interface enumeration
if-addrs = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log    = "0.4"
